--- a/kanjip.html
+++ b/kanjip.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tp11</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>kanji</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="setting--page">
- 
     <pre>
-       
-
+        
     </pre>
     <p>
         <a  class="setting--a" href="index.html">home</a>
-        <a  class="setting--a" href="testp12.html" target="_blank">link testp12</a>
     </p>
 </body>
 </html>
