--- a/tanbunp1.html
+++ b/tanbunp1.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p1</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="setting--page">
     <pre>
+        番組(ばんぐみ)　番組(ばんぐみ)　
     テレビ番組は、その番組内容のすべてが視聴者に伝わるよう、わかるように作られるが、⼀歩間違え
 れ ば、「わかりやすいだけの番組づくり」になってしまう危険性がある。
 Các kênh truyền hình được thực hiện để truyền tải, để cho người xem hiểu tất cả nội dung chương trình
@@ -714,5 +715,6 @@ TANBUN N1 các năm 2010 - 2021 - Siêu Tốc N1-N2 Như Á
 Người có tuổi nghĩ rằng nên cân bằng giữa rau và thịt.
 (SAI , K nhắc đến lun )
 </pre>
+<a class="setting--a"  href="index.html">home</a>
 </body>
 </html>
