--- a/testp10.html
+++ b/testp10.html
@@ -492,7 +492,8 @@ Subject：Re：キャンプ
 山口
  </pre>
     <p>
-        <a href="./testp10.html" target="_blank">link testp3</a>
+        <a  class="setting--a" href="index.html">home</a>
+        <a class="setting--a"  href="testp11.html" target="_blank">link testp11</a>
     </p>
 </body>
 </html>
