--- a/testp3.html
+++ b/testp3.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tp3</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="setting--page">
-    <pre>
+ <pre>
         問題 7 次の文章を読んで、文章全体の趣旨を踏まえて、（41）から（45）の中に入る最
 もよいものを、1・2・3・4 から一つ選びなさい。 
 「キラキラネーム」とは、常用漢字にない読み方をしたり、外国語由来の単語に漢字を
@@ -435,9 +435,10 @@ B
 
 74
  
-    </pre>
+</pre>
     <p>
-        <a href="./testp4.html" target="_blank">link testp3</a>
+        <a  class="setting--a" href="index.html">home</a>
+        <a  class="setting--a" href="testp4.html" target="_blank">link testp4</a>
     </p>
 </body>
 </html>
