--- a/testp4.html
+++ b/testp4.html
@@ -448,7 +448,8 @@ B 被災地では悲しい記憶が今も消えない。阪神・淡路大震災
 価格：298800 
     </pre>
     <p>
-        <a href="./testp5.html" target="_blank">link testp3</a>
+        <a  class="setting--a" href="index.html">home</a>
+        <a  class="setting--a" href="testp5.html" target="_blank">link testp5</a>
     </p>
 </body>
 </html>
