--- a/testp5.html
+++ b/testp5.html
@@ -400,7 +400,8 @@ B
 
     </pre>
     <p>
-        <a href="./testp6.html" target="_blank">link testp3</a>
+        <a  class="setting--a" href="index.html">home</a>
+        <a  class="setting--a" href="testp6.html" target="_blank">link testp6</a>
     </p>
 </body>
 </html>
