--- a/testp6.html
+++ b/testp6.html
@@ -488,7 +488,8 @@ B
 する日）の年齢が 71 歳の方の有効期間は 4 年間、72 歳以上の方の有効期間は 3 年間と 
     </pre>
     <p>
-        <a href="./testp7.html" target="_blank">link testp3</a>
+        <a class="setting--a"  href="index.html">home</a>
+        <a  class="setting--a" href="testp7.html" target="_blank">link testp7</a>
     </p>
 </body>
 </html>
