--- a/testp7.html
+++ b/testp7.html
@@ -441,7 +441,8 @@ B
 
     </pre>
     <p>
-        <a href="./testp8.html" target="_blank">link testp3</a>
+        <a  class="setting--a" href="index.html">home</a>
+        <a class="setting--a"  href="testp8.html" target="_blank">link testp8</a>
     </p>
 </body>
 </html>
