--- a/testp15.html
+++ b/testp15.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tp11</title>
+    <title>tp15</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="setting--page">
@@ -14,8 +14,8 @@
 
     </pre>
     <p>
-        <a  class="setting--a" href="index.html">home</a>
-        <a  class="setting--a" href="testp12.html" target="_blank">link testp12</a>
+        <a class="setting--a" href="index.html">home</a>
+       <p> End</p>
     </p>
 </body>
 </html>
