--- a/testp2.html
+++ b/testp2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tp2</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="setting--page">
  <pre>
@@ -456,7 +456,8 @@
 
  </pre>
     <p>
-        <a href="./testp3.html" target="_blank">link testp3</a>
+        <a class="setting--a"  href="index.html">home</a>
+        <a class="setting--a"  href="testp3.html" target="_blank">link testp3</a>
     </p>
 </body>
 </html>
