--- a/testp8.html
+++ b/testp8.html
@@ -398,7 +398,8 @@ B
 
     </pre>
     <p>
-        <a href="./testp9.html" target="_blank">link testp3</a>
+        <a class="setting--a"  href="index.html">home</a>
+        <a class="setting--a"  href="testp9.html" target="_blank">link testp9</a>
     </p>
 </body>
 </html>
