--- a/testp9.html
+++ b/testp9.html
@@ -436,7 +436,8 @@ B
 
     </pre>
     <p>
-        <a href="./testp10.html" target="_blank">link testp3</a>
+        <a class="setting--a"  href="index.html">home</a>
+        <a class="setting--a"  href="testp10.html" target="_blank">link testp10</a>
     </p>
 </body>
 </html>
