--- a/testp11.html
+++ b/testp11.html
@@ -7,12 +7,439 @@
     <title>tp11</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
+<body >
  
-    <pre>
-       
+    <div class="setting--page">
+        問題 7 次の文章を読んで、（41）から（45）の中に入る最もよいものを、1・23・4 か
+ら一つ選びなさい。 
+フランスの歴史人口学者エマニュエル・トッド氏が、青山学院大学の招きで来日した。
+イラク洋争前の 02 年に刊行された『帝国以後』で、（41）米国の衰退と世界金融危機の
+到来を予見。新刊でも次の「予言」をして注目されている。『帝国以後』は日本でも 13
+刷 2 万部と、翻訳の人文書としては異例のヒットとなり、新刊『デモクラシー以後』も増
+刷となった。
+同書でのトッド氏の次の「予言」は、自由質易体制による経済危機の深化が、先進国の
+民主主義を脅かす（42）イデオロギー対立は空虚となり左派も右派も似たような経済政策
+しか打ち出せない中で、選挙は「みせかけの左右対立」を演じる場になりつつあるという。
+「予言」の基底にあるのは、地域ごとの伝統的な家族類型の分析だ。親子関係の自由さや
+兄弟関係の平等さが、社会の価値観と連関しているとし、さらに乳児死亡率や識字率の変
+動といった基本データから社会構造の変化を読み取る。
+松原隆一東京大学教授（社会経済学）は、トッド氏の（43）さは「人間の合理性には限
+界があるとするトータルな人間（44-a）にあるという。経済学の主流となった新古典派の
+議論では、人間の価値観はバラバラだが常に合理（44-b）な選択をし、未来は予測可能と
+される。しかしトッド氏は、人間は基本的な社会観を家族に学ぶなのだから、完全に自由
+で抽象的な個人などいないとみる」。
+松原氏は、トッド氏の議論が、新自由主義の理論でもある新古典派の前提に枠をはめる
+役割を（45）と指摘。「複雑な数式を操る金融工学に比べてトッドの方法はシンプルだが、
+より健全で人間的だ」としている。
+<br>
+41.
+１ いちやく ２ いち早く ３ いちだんと ４ いちりつに <br>
+42.
+１ ということか ２ というところだ ３ というときだ ４ というものだ<br>
+43.
+１ ユニーク ２ ロング ３ ユーモア ４ ビッグ<br>
+44.
+１ a 力/b 性 ２ a 感/b 観 ３ a 性/b 的 ４ a 性/b 化<br>
+45.
+１ ふくんでいる ２ 行っている ３ 果たしている ４ おさめている<br>
+ 
+問題 8 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
+ら一つ選びなさい。 
+(1) 
+最近は、パソンコンを学んで自分の世界を広げようという意欲ある高齢者が増えている
+が、カタカナが障害になっているのではないだろうか。
+そんな疑問を持って、富山県山田村を訪ねた。6 年前、約 460 世帯すべてにパソコンを
+配布、各家庭からインターネットをつなぐことで、ムラの情報化のモデルとして注目され
+たところだ。利用者の最高齢は 85 歳と聞いていたので、「お年寄りがカタカナ語に戸惑
+っている姿」を思い描いて出かけた。だが、その“期待”は少なからず裏切られることに
+なった。<br>
+46.次に続く文章の内容として適当なものはどれか。<br>
+１ お年寄りたちはあまりのカタカナ語の難しさに、パソンコンを学ぶことをあきらめ
+ てしまっていた。<br>
+２ カタカナ語が障害になって、お年寄りの中には依然としてパソコンを使えない人が
+ 少しいた。<br>
+３ 初めはカタカナ語に戸惑っていたお年寄りたちだが、今ではパソコンを自在に使い
+ こなしていた。<br>
+４ お年寄りたちはカタカナ語に戸惑いながら、簡単なパソコン操作を覚えようと努力
+ していた。<br>
+ 
+ (2) 
+今年も松山の知り合いから、（注 1）伊予かんが届いた。うれしい。味というのは不思
+議なもので、伊予かんを食べると、伊予かんの味といっしょに、松山の味がよみがえって
+くる。もちろん、この場合の「松山の味」というのは、食べ物の味のことではない。「松
+山というマチの味わい」である。
+そんな「味」が、一番濃厚に詰っているのは、やはり食べ物だろうと思う。（注 2）伊
+予がすりを見ても、砥部焼きを見ても、それなりにぼくは松山の味を思い出すけれど、伊
+予かんやタルトを食べたときのほうが、圧倒的に口のなかに松山の味がよみがえってくる。
+味覚というのは視覚や聴覚よりも、原始的なぶんだけ強いものがあるらしい。
+で、ぼくも人に贈り物をするときは、そういう贈り物をしたいと思ってきた。<br>
+<br>
+（注 1）伊予かん：みかんの一種で、愛媛県の特産物<br>
+（注 2）伊予がすり・砥部焼き：愛媛県を代表する織物と焼き物<br>
+47.そういう贈り物とあるが、筆者はどんな贈り物をしたいと思っているか。<br>
+１ 自分の町を思い出してもらえるような食べ物。<br>
+２ 自分が住んでいる町を代表する品物。<br>
+３ おいしい味が濃厚に詰っている食べ物。<br>
+４ 自分の町の味わいがわかるような工芸品。<br>
+  (3) 
+懸命に仕事を続けるほど壁は厚く立ちはだかる。そういう経験をした人は多いだろうと
+思 います。時代の変化に対応し、お客様のためになる提案をしたいと考えた時、まず私
+たちは上司に提案します。しかし上司には認めてもらえない、他部門の人からも承諾が得
+られないとしたらどうするか。
+自分の提案をもう一度検討し尽くすことが最も大切なステップでしょう。お客様のため
+になるか、ニーズに合致しているか。そして会社にも貢献できるか。ここで考え抜かなく
+てはなりません。それでも間違いないと思えたら、自分のすべてをかけて分かってもらう
+しかない。どうしてもやるべき提案なのに上司に伝わらなかったら、直属の上司には断り
+を入れて、恐れずにもう一つ上の上司に提案するべきなのですね。そして結果は、どのよ
+うになっても自分で引き受けるのです。<br>
+48.自分の提案を上司に認めてもらえない時、どうすればいいと筆者は言っているのか。<br>
+１ 先に他部門の人の承諾が得られるように、もう一度検討し、間違いないと思えたら、
+上司に提案する。<br>
+２ 客や会社のこと、ニーズに合っているかという点でもう一度検討し、間違いないと
+思ったら、実行する。<br>
+３ すべてをかけて考え抜き、上司に伝わると思ったら、直属の上司ではなく、もう一
+つ上の上司に提案する。<br>
+４ 自分自身でもう一度検討し、上司に分かってもらえなかったら、直属の上司の了解
+を得て、もう一つ上の上司に提案する。<br>
+ (4) 
+生まればかりの赤ちゃんを、母親のお腹の上に置くと、お乳の方に向かって這おうとす
+る。人間の赤ちゃんに限らず、イヌもネコも誰にも教えられなくても母親の乳首に 
+吸いつく。
+誰も教えんないのに、赤ちゃんはなぜそうしたことを知っているのであろうか。何か哺
+乳類に共通の「原初の記憶」ともいうべきものが備わっているように思える。どの赤ちゃ
+んも生まれつきを知っているのであるから、このような行動は DNA によって遺伝するもの
+と考えなければならない。大昔の人間や動物たちが体験したことがらが、DNA に書き込ま
+れて、それが代々伝えられてきたのであろうか。
+おそらく乳首に吸いつくことのできる遺伝子をもった固体だけが生き残り、もたないも
+のは淘汰されてきたのであろう。<br>
+49. 赤ちゃんはなぜそうしたことを知っているのであろうかとあるが、何を知っている
+のか。<br>
+１ 母親の乳首に吸いつくこと。<br>
+２ 原初の記憶というべきもの。<br>
+３ DNA によって遺伝すること。<br>
+４ 大昔の人間や動物が体験したこと。<br>
+  
+問題 9 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4 か
+ら一つ選びなさい。 <br>
+(1) 
+日本人はヨーロッパ人のように自然と対決するのではなく、自然に親しみ、自然に同化
+することによって安らぎを得てきた。それと同じことが社会についてもいえる。日本人は
+欧米人のように個人を社会に対置することなく、世間と自分とをひとしなみに表象してき
+たのだ。「渡る世間に鬼はない」という諺が①その一端を語っている。日本の自然が 
+優しい。
+山河であるように、日本の世間も――他民族の社会と比べれば――結構、心安い社会だ
+ったからであろう。
+むろん、日本には地震をはじめとして、自然の災害も少なくない。同様に、日本の社会
+を甘えていればそれですむというほど寛容なものだったとも思えない。世間の目は往々に
+して冷たいのである。しかし、多くの異民族が同居しているのが常態であるような他の
+国々と違って、日本はきわめて同質的な社会であり、自然の厳しさも、社会の厳しさも、
+ほかと比べればずっと気楽なものといえる。そして、②日本人の人間観や「自分」意識は、
+このような風土の産物といってよい。こうした社会では、人々は自分を主張し、世間と対
+決して生きるよりも、自分を顧み、世間という人間関係のなかでの自分の立場をつねに意
+識して、社会に協調して生きようとするのである。<br>
 
-    </pre>
+50.①その一端の「その」とは、何を指すのか。<br>
+１ 自然に親しみ、自然に同化すること。<br>
+２ 自然から安らぎを得てきたこと。<br>
+３ 世間と自分とをひとしなみに表象してきたこと。<br>
+４ 日本の社会が心安い社会だということ。<br>
+51.②日本人の人間観や「自分」意識は、例えばどのようなものから生まれたと、穫者は
+言っているのか。<br>
+１ 同質的な社会 <br>
+２ 安らぎが得られる社会<br>
+３ 寛容ではない社会<br>
+４ 世間の目が冷たい社会<br>
+52. この文章の内容と合っているものはどれか。<br>
+１ 日本は同質的な社会なので日本人は世間に心安く、甘えて生きてきた。<br>
+２ 日本は世間の目が冷たいので、日本人は自分を主張し、世間と対決して生きてきた。<br>
+３ 日本人は、社会や自然の本当の厳しさを知らずに、気楽に生きてきた。<br>
+４ 日本人は自然に同化するように、世間に自分を合わせようと生きてきた。<br>
+ 
+(2) 
+ゴリラがとてもよく遊ぶ動物だということはあまり知られていない。しかめ面をして偏
+屈な性格をしていると思っている人が多い。それに、子供ゴリラは日本の動物園にわずか
+しかいない。
+遊びが子供の特権なのはゴリラの世界でも変わりがない。しかし、野生のゴリラを見て
+いると、大人のゴリラもよく遊ぶことに驚かされる。オスゴリラが巨体をゆすって組み合
+うと、一瞬激しい闘争が起こったのかと思う。しかし、顔には楽しそうな笑いが浮かんで
+いるし、きちんと遊びのルールを守っていることがわかる。
+それは、（ ① ）を尊重するというルールだ。どんなに体が大きいゴリラでも小さな
+ゴリラに遊びを強制できないし、誰でも遊びの誘いを拒否できる。相手が乗らなければ、
+遊びは続かない。だから、大きいゴリラはかがんだり動作を緩めたりして自分にハンデを
+つける。そして大げさな身振りで②相手を挑発するのだ。この際、ドラミングという両手
+の平で胸をたたく行動がよく使われる。ドラミングは、組み合わずに相手を挑発し、相手
+の気分をうかがう絶好の道具だからである。
+笑い声も遊びを誘い、持続させる効果をもっている。興に乗るとゴリラはグコグコグコ
+グコと腹の底から楽しそうな笑い声を上げるのである。笑う霊長類は人間を除けば、類人
+猿しかいない。人間はドラミングのかわりに言葉を持った。でも遊びの原則は不変ではな
+いかと思う。<br>
+
+53.（ ① ）には、どんなが言葉が入るか。<br>
+１ 上下の関係
+２ 互いの対等性。<br>
+３ 楽しい充囲気
+４ 子供の考え<br>
+54.②相手を挑発するのだ。この際、ドラミングという両手の平で胸をたたく行動がよく
+使われるとあるが、ゴリラは相手を挑発するときに、なぜ、ドラミングをするのか。<br>
+１ 相手の気分をうかがうことができるから。<br>
+２ ドラミングをするのがリールだから。<br>
+３ 組み合うと、闘争が起こったのかと思うから。<br>
+４ 小さなゴリラに遊びを強制したいから。<br>
+55.この文章にタイトルをつけるとしたら、次のどれか。<br>
+１ ゴリラの遊び ２ 子供のゴリラと大人のゴリラ<br>
+３ 笑う類人猿 ４ 遊びのルール<br>
+ 
+(3) 
+東京の鉄道各社がマナーの悪い乗客への対応に苦慮しているという記事を新聞で読んだ。
+そういえば、インターネットにも「許せない電車内のマナー」について調査結果が出てい
+た。「車内での化粧」や「お年寄りに席を譲らない」などはもう①いまさらの感やするが、
+私が一番迷惑だと思うのは、ヘッドフォンからの音漏れである。あのシャカシャカという
+音を聞くとイライラしてくる。もうどうしても我慢できなくなってしまう。ヘッドフォン
+で音楽を聴いているのは、多くの場合若い男性で、周囲の迷惑には（注）無頓着である。
+②私はおおげさに手で耳を塞いだどり、露骨に嫌な顔をするのであるが、全く意に介さな
+い。かといって、生来の気の弱さから、「音量を下げてください」と面と向かっては言え
+ない。ときどき、音量のダイヤルを最大にしてやろうかという衝動にかられる。きっと慌
+てるだろうなと一人ほくそえむが、結局のところ、③空想でそのストレスを解消するしか
+ないのである。<br>
+（注）無頓着：物事を気に掛けないこと<br>
+56.①いまさらの感とは、ここではどんな意味か。<br>
+１ 最近になってわかったという意味。<br>
+２ 今まで十分に言われてきたという意味。<br>
+３ 今からもっと多くなるという意味。<br>
+４ 今もこれからも続くという意味。<br>
+57.②大げさに手で耳を塞いだりとあるが、なぜ「大げさ」にするのか。<br>
+１ 筆者が迷惑に思っていることに気づいてほしいから。<br>
+２ 音の大きさに我慢できず、怒りでおおげさになるから。<br>
+３ 口で注意をするだけでは、十分ではないから。<br>
+４ ヘッドフォンの音楽が本当に大きくて耳が痛いから。<br>
+58. ③空想でとあるが、筆者は空想で何をするか。<br>
+１ 音量を下げてくださいと頼むこと。<br>
+２ 慌てた若者を見てひとりほほえむこと。<br>
+３ 音量のダイヤルを最大にすること。<br>
+４ 大げさに手で耳を塞ぎ、嫌な顔をすること。<br>
+
+問題 10 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
+から一つ選びなさい。 <br>
+外国人の友人が、学生時代、夏休みに日本人の家にホームステイした時の話をした。彼
+女が滞在した家庭では、それぞれ自分用の食器を持っていたというのだ。それに何でびっ
+くりしたのか、①初めは理解できなかった。よく聞くと、彼女の国では、食器は誰がどの
+食器を使おうとかまわず、ただ人数分の食器があるだけらしい。それに対して、彼女の泊
+まった日本人ホストファミリーのお宅では、はしを初め、茶碗、お椀、コーヒーカップと
+あらゆる食器がお父さん用、お母さん用と決められてびっくりしたというのだ。
+考えてみれば、私のうちでもそれぞれ決められた食器がある。また、結婚して初めて主
+人の実家を訪れた時、義理の母も「これがあなたの茶碗と湯飲みね」と用意しておいてく
+れたのを思い出した。私の実家にも年に数回しか帰らない嫁に行った娘たち用の食器がい
+まだにあり、もちろん新しく増えた義理の息子や孫用の食器も並んなでいる。非常に不経
+済だと思うのだが、母は「自分の食器がなかったら寂しいでしょ。これが家族なのよ」と
+言う。ここにはあなたの居場所があるという、帰属意識を持たせるためなのか、衛生的な
+観点から、他の人と食器を共有としたくないという気持ちの表れなのだろうか。それとも、
+食器までいちいち所有をはっきりさせるというのは所有欲が強いのだろうか。もっとも、
+たまたま私の家も同じ習慣を持っていただけで、日本人がみなというわけではないだろう
+が、②友人の言ったことが気になってしょうがない。
+ふと、昔読んだ小説を思い出した。うろ覚えだが、かいつまんで説明するとこんな話だ
+ったと思う。その小説に登場する女性の愛用している湯飲み茶碗には、口紅の跡がついて
+いた。毎日同じ所からお茶を飲むので、洗っても落ちなかったのだ。持ち主が亡くなった
+後、その口紅の跡を見ると、亡くなった彼女の魂がその湯飲み茶碗に宿っているように感
+じたという話だった。日本人は、食器にもそれを使う人の魂が宿ると考えるのだろうか。
+<br>
+59.①初めは理解できなかったとあるが、だれが理解できなかったのか。<br>
+１ ホストファミリー   ２ 筆者    ３ 義理の母  ４ 外国人の友人 <br>
+60. ①初めは理解できなかったとあるが、どうして理解できなかったのか。<br>
+１ 外国人の友人に説明がうまく通じなかったから。<br>
+２ 食器の数が多いことはびっくりすることではないから。<br>
+３ 驚くような場面ではないので、驚く理由が分からなかったから。<br>
+４ ホームステイしたことがなく、他人の家で戸惑った経験がなかったから。<br>
+61. ②友人の言ったこととは、どういう言葉か。<br>
+１ ホームステイした家族は自分用の食器を持っていたので、驚いた。<br>
+２ 食器はいつ、だれが、どれを使ってもかまわないんじゃないか。<br>
+３ 自分の食器を持つことはその家族の一員になることなんだ。<br>
+４ 茶碗にその持ち主の魂が宿っているという考えがあるらしい。<br>
+62. 筆者が自分の食器を持つ理由として挙げていないものはどれか。<br>
+１ 何度も使え、経済的だから。<br>
+２ 帰属意識を持ちやすくなるから。<br>
+３ 自分のものという所有欲が強いから。<br>
+４ 他人と共有しないので衛生的だから。<br>
+  
+問題 11 次の A と B はそれぞれ別の新聞のコラムである。A と B の両方を読んで、後の問
+いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。 <br>
+A 
+新学期に備えて、辞書の選び方について考えてみたい。
+電子辞書を使っている学生は「何冊もの辞書の内容がコンパクトな手帳サイズの中に入
+っているので持ち運びが楽だ。手書き入力やジャンプ機能などいろいろな調べ方ができる
+のも魅力」と言っている。
+一方、紙の辞書を使っている学生は「確かに紙の辞書は重いけど、調べた言葉がどこに
+あったか覚えているので、忘れにくい。調べた言葉の前後の項目も自然に目に入り、幅広
+い知識が得られる」と話している。
+まず自分がいつ何のために辞書を使うのかをよく考えることが大切である。<br>
+B 
+最近、電子辞書を持つ中高生が増えている。一つの電子辞書に国語、英和、和英などの
+数冊の辞書が入っているので、携帯に便利だ。しかも調べたい語を素早く検索できる。値
+段が高いことを除けば、学生のニーズに合っているといえよ。
+しかし、教師や親は従来の紙の辞書を薦める向きが多い。「学習」ということを考える
+と、紙の辞書のほうが効果が高いと考えるからだ。特に「調べた言葉の前後を読む」とい
+うことを重要と考えているようだ。
+検索慣れしている現在の学生には電子辞書のほうが支持されるだろうが、教師のアドバ
+イスに耳を傾ける必要もあるのではないだろうか。<br>
+ 
+63.A と B のどちらの記事にも触れられている内容はどれか。<br>
+１ 紙の辞書の学習効果。<br>
+２ 電子辞書の検索方法。<br>
+３ それぞれの辞書の短所。<br>
+４ 学習と教師の好み。<br>
+64.電子辞書と紙の辞書の選び方について、A の筆者と B の筆者はどのような立場をとって
+いるか。<br>
+１ A は紙の辞書を、B は電子辞書を薦めている。<br>
+２ A は電子辞書を、B は紙の辞書を薦めている。<br>
+３ A は目的に合わせた選び分けを、B は紙の辞書を薦めている。<br>
+４ A も B も、自分の目的に合わせて辞書を選ぶべきだと言っている。<br>
+65. 教師が紙の辞書を薦める理由は何か。<br>
+１ 電子辞書より値段が安いから。<br>
+２ 目に入る情報量が多いから。<br>
+３ 調べた言葉を忘れにくいから。<br>
+４ 検索の方法が一つだけだから。<br>
+ 
+問題 12 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
+から一つ選びなさい。 <br>
+日本人に個性がないということはよく言われていることだけれど、今世界的に、1 週間、
+あるいは年間にどれだけ働くか、ということについて、常識的な申し合わせが行われてい
+ることには、①私はいつゃ違和感を覚えている。
+私は毎年、身体障害者の方たちとイスラエルやイタリアなどに巡礼の旅をしているが、
+一昨年はシナイ山に上った。盲人も 6 人、ボランティアの（注 1）助力を得て頂上を究め
+た。
+普段、数 10 歩しか歩けない車椅子の人にも、頂上への道を少しでも歩いてもらった。
+障害者にとっての山頂は、決して現実の山の頂きではない。もし普段 100 歩しか歩けない
+障害者が、頑張ってその日に限り、山道を 200 歩歩いて力尽きたら、そここそがその人に
+とっての光栄ある山頂なのである。
+②人間が週に何時間働くべきか、ということにも、一人一人の適切な時間があると思う。
+労働時間を一律に決めなければならない、とするのは専門職ではない、未熟練労働に対す
+る基準としてのみ有効である。
+未熟練労働者の場合は、時間あたりの労働賃金をできるだけ高くし、それによって労働
+時間を短縮しようとして当然である。
+しかし、専門職と呼ばれる仕事に従事する人は、労働報酬の時間あたりの金額など、ほ
+とんど問題外だ。
+私は小説家だが、小説家の仕事も専門職に属するから、一つの作品のためにどれだけ時
+間をかけようと勝手である。短編をほんの 2、3 時間で書いてしまうこともあるし、10 年、
+20年と資料を集め調べ続けてやっと完成するものもある。一つの作品に私がどれだけの時
+間や労力や調査費をかけようが、昼夜何時間ずつ働こうが、それは私がプロである以上、
+自由である。
+日本の社会の中には、職場の同僚がお互いに（注 2）牽制するので、取ってもいいはず
+の休みも取れない人が確かにかなりいる。小さな会社に頼みこまれると、したくもない残
+業をしなければならなくなる社員もいる。そうしないと会社が潰れて失職をすることが目
+に見えているからである。その結果「過労死』」などということも稀には起きることに
+なる。<br>
+しかし日本人のなかには、仕事が趣味という人も実に多い。ブルーカラーと呼ばれてい
+る人たちの中にさえ、どうしたら仕事の能率が上がるか考えている人は（注 3）ざらであ
+る。趣味になりかけているものが、たまたま会社の仕事だから、時間が来たら帰らねばな
+らない、というのもおかしなことだ。それは③プロの楽しみを妨げることであって、一種
+の個人の目由の束縛というものである。
+ただそれほど働きたくない人は仕事をしない自由を完全に守れるように、社会は体制を
+作り変えるべきである。しかし同時に、一律に休みを取れ、というような社会主義的発想
+は、いくら世界の流行だとはいえ、自由を手にしている人間に対しては、個人への干渉で
+あり、非礼である。<br>
+（注 1）助力を得る：助けてもらう
+（注 2）牽制する：相手に注目して、自由な行動を邪魔する
+（注 3）ざらである：よくある<br>
+66. ①いつも違和感を覚えているのはどうしてか。<br>
+１ 日本人に個性がないから。<br>
+２ 世界的に労働時間が決められているから。<br>
+３ 適切な労働時間は人によって異なるから。<br>
+４ 日本人は働きをすぎるから。<br>
+67. ②人間が週に何時間働くべきか、ということにも、一人一人の適切な時間があると
+思うのはどうしてか。<br>
+１ 未熟練労働者は長時間働かなければならないから。<br>
+２ 小説家は専門職だから。<br>
+３ 未熟練労働者か専門職かで労働時間に対する考え方が違うから。<br>
+４ 労働報酬時間あたりの金額を高くしなければならないから。<br>
+ 
+68. ③プロの楽しみとは何か。<br>
+１ 小説を専門家として書くこと。<br>
+２ 納得した仕事をするために時間をかけること。<br>
+３ 社長に頼みこまれて残業をすること。<br>
+４ 仕事と趣味を両立させること。<br>
+69. 筆者の主張に合っているものはどれか。<br>
+１ 労働時間の短縮は世界の流行だから、日本人ももっと休んで過労死を防ぐべきだ。<br>
+２ 仕事が趣味の人も時間がきたら仕事を止めて帰らなければならない。<br>
+３ 職場の同僚に遠慮せずに休みはできるだけ取るべきだ。<br>
+４ 長時間働くのも、あまり仕事をしないのも、個人の自由だ。<br>
+問題 13 次はある新聞の書評である。下の問いに対する答えとして、最もよいものを 1・
+2・3・4 から一つ選びなさい。 <br>
+70.カレルさんは、古典的 SF 作品を読むつもりだ。コーエンの作品は全部読んでいるので、
+ほかの作者にしようと考えている。カレルさんの条件に合う本は何冊あるか。<br>
+１ 1 冊 ２ 2 冊 ３ 3 冊 ４ 4 冊<br>
+71. 伊藤さんは、社会問題を考えさせるような小説を読みたい。シリアスなのを 1 冊、
+手軽に読めるのを 1 冊買うつもりだ。単行本は高いので文庫本がいい。伊藤さんの条件に
+合う本の組み合わせはどれか。<br>
+１「遠い影」と「牛込坂のボス」<br>
+２「遠い影」と「カトレア」<br>
+３「近未来」と「宇宙人は UFO で地球に来る？」<br>
+４「近未来」と「とこしえの歌」<br>
+今週おすすめ本 
+崎田 徹著『字宙人は UFO で地球に来る？』 
+今話題の UF0／超能力などの事例を取り上げて、
+科学的根拠をもって明快に反論した良書。（パ
+オパウ新書、880 円）
+サム・クローリー著『遠い影』 
+人種差別、恋愛、殺人…。錯綜する人間関係の
+中に浮かび上がる意外な事実。この小説は我々
+に生きることの意味を鋭く問いかける。
+（川田文庫、830 円、伊藤洋訳）
+トーマス・コーエン著『近未来』 
+政治が人の心の内側まで支配する未来社会を描
+いた。あまりにも有名な SF 古典。21 世紀の今、
+われわれは自由になっているのだろうか。（久
+賀文庫、760 円、高橋みな訳）
+リサ・ダッシャー著『とこしえの歌』 
+死は終わりではなく、受け継がれていく歌＝言
+葉を通して再生へと開かれている。伝承と現実
+が溶け合い、豊かな人の営みを描ききった現代
+文学の傑作。
+（かきぬま書店、1,500 円、深山勇訳）
+土屋 隆編『火星物語ヴィンテージ SF 短編集』 
+待望のクラシック SF 短編集。「第 3 話水星横
+断」（ベック著）は、SF ファン必読の傑作。
+400 度になる水星の表面を特別な車で横断する。
+とにかく、熱い。
+（久賀書房、2,100 円）
+ダニエル・チャン著『氷と炎』 
+40 年前の大ヒット SF 映画「水と炎」の原作。灼
+熱の昼と酷寒の夜のその星では人は 10 日間しか
+生きられない。1 人置き去りにされた男は必死に
+運命に立ち向かう。彼の祈りは届くのか。
+（立川 SF 文庫、540 円、大野一成訳）
+徳丸 有著 『カトレア』 
+「カトレア」は、年取った猫がいる漁港の
+美容院。仕事の合間に「カトレア」に集ま
+り話をする女たち。皆嘘つきで、下品で、
+切なくて、悲しい。それは、社会の吹きだ
+まりのようなこの町で生きるために身に付
+けた悲しい習性。港町の女たちの熱い愛、
+心に響く作品。
+（新流文庫、400 円）
+佐藤 かおる著『のら猫、町を生きる』 
+ノラ猫の寿命は 4、5 年と短い。町の生
+態系における位置づけ人間社会とのかかわ
+りに迫る。獣医師でもある著者が観察を元
+に考察。冷静かつ思いが詰まった 1 冊。
+（KTT 出版、1,870 円）
+東 頼子著 『旅するとら猫』 
+「とら猫のとら子」は、仲間の猫と俳句を
+詠むうちに、江戸時代の俳句作家がたどっ
+た旅路、東北道をたどることに。ネコを主
+人公に軽快な語り口でつづられているが、
+俳句の真髄に迫る質の高い文学評論となっ
+ている。
+（川島書 房、2,100 円)
+渡邊 卓著 『牛込坂のボス』 
+東京・牛込坂にある老舗旅館「五月雨」は
+売れない文学者たちの溜まり場。この旅館
+を舞台に、ここで人生を全うし、牛込坂の
+シンボルとして愛されたネコ「モモ」の視
+点から、作家や脚本家たちのユーモラスな
+姿をエッセイ風につづった 1 司。
+（太郎社、1,900 円）
+
+    </div>
+    
     <p>
         <a  class="setting--a" href="index.html">home</a>
         <a  class="setting--a" href="testp12.html" target="_blank">link testp12</a>
