--- a/testp12.html
+++ b/testp12.html
@@ -7,12 +7,453 @@
     <title>tp12</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
- 
-    <pre>
-       
+<body>
+    <div  class="setting--page">
+        問題 7 次の文章を読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
+ら一つ選びなさい。 <br>
+パスワードを紙などに記録して保存すると、忘れる可能性は低いが、第三者に使われる
+危険性が高くなる。（41）パスワードを記録しないで頭の中に記憶しておくと、第三者に
+使われる危険性は低いが、自分目身で分からなくなる可能性がある。
+そこで、たくさんの目的用の異なるパスワードを保持しながら、忘れる可能性も危険性
+も低くなるような方法が（42）。一つの解決法が、パスワードを頭の中に記憶する共通部
+分と紙などに記録する可変部分に分けることである。
+例えば、二十の目的用に異なるパスワードを二十個（43）。まず、決して他人には話さ
+ず頭の中にのみ記憶する四文字程度の英数字列を一つ決める。この共通部分としては、他
+人が容易に推定できるような、本人の生年月日、住所、電話番号などは絶対に避ける必要
+がある。
+次に、二十の目的用に六文字以上の英数字列を二十個作り、これを紙に記録する。この
+可変部分は、目的ごとに作る。比較的気楽に作ってよい。ただし普通の単語がそのまま出
+現する文字列は避ける。
+実際のパスワードは、まず頭の中に記憶している四文字程度の英数字列を入力し、次に
+紙を見て六文字以上の英数字列を入力する。これで目的ごとに異なった、忘れにくいパス
+ワードが出来上がる。必要があれば、さらに可変部分を一定期間ごとに変更したり、大文
+字、小文字、記号、数字をすべて（44）。これで本人が忘れにくく、第三者に使用される
+危険性も比較的低いパスワードが得られた。（45）、利用しているサービスのパスワード
+紛失時の手続きが、第三者に簡単に答えられるような複数質問の場合には、ユーザー名や
+パスワードの注意深い管理も、あまり役に立たない。<br>
+41. １ 実に ２ 逆に ３ 特に ４ 単に<br>
+42. １ 必要になる ２ 見つかった ３ 存在する ４ 行われた<br>
+43. １ 持っていなければならない ２ 持っているのである<br>
+ ３ 持たなければならないのである ４ 持たなければならないとしよう<br>
+44.
+１ 含んでいた ２ 含むようにした ３ 含むようにする ４ 含んでいる<br>
+45.
+１ しかも ２ 一方 ３ ただし ４ つまり<br>
 
-    </pre>
+問題 8 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
+ら一つ選びなさい。 <br>
+(1) 
+1995 年 1 月、関西には、全く予期しない大災害が起こった。周知の阪神・淡路大震災で
+ある。あの災害の折には、日頃は気づかふれない現在の社会生活上の様々な問題が数多く
+吹き出したのであった。特に高齢者や障害者が遭遇した困難はまことに深刻であった。そ
+うした折、避難所での暮しの中で、視聴障害者が、行政などから出される各種の情報を受
+け取るのに不都合な立場におかれていたこともその一つであった。たとえば、食事が支給
+されるという伝達が口頭で伝えられてくると、周囲の人が積極的な配慮を加えない限り、
+その伝達を実質的には受け取ることができず、たまに時として給食を受け取れないまま空
+腹で過ごすことを余儀なくされてしまったのであった。<br>
+46.筆者は避難所での出来事は何が原因だと考えているか。<br>
+１ 視聴障害者が給食を受け取りに行かなかったこと。<br>
+２ 周りの人たちが積極的に障害者の手助けをしなかったこと。<br>
+３ 行政が情報を受け取る側の条件を配慮せずに情報を伝えたこと。<br>
+４ 行政が一人一人に給食を渡さなかったこと。<br>
+ 
+(2) 
+新聞でコラムを毎日書き始めたころ、手元に届く投書の数に驚きました。
+はじめのうち酷評に傷ついて（注）いささかくさっているとき、生態学者の宮脇（みや
+わき）昭（あきら）さんに会いました。投書の話をすると宮脇さんは「それはむしろいい
+ことじゃないですか」というのです。
+芝生には、さまざまな雑草がまじっている。まじっているのがむしろ健全な姿なのです。
+それをいやがって、虫眼鏡とピンセットで雑草を抜き取り、純粋な芝だけにしたらどうな
+るか。ひとたび虫害が発生すれば、芝はたちまちやられてしまう、と宮脇さんは言います。
+芝生の生態系は、雑草を含んではじめて安定している。 雑草を抜き去ることはむしろ
+生態系を壊す。
+（注）いささかくさっている：ちょっと気が沈んでいる
+47.この文章の後に続く宮脇さんの主張として、最も適当なものはどれか。<br>
+１ それと同じで、この世の中、投書する人が多いからこそ健全なのではないですか。<br>
+２ それと同じで、この世の中、多くの人に読んでもらえるからこそ安定しているので
+ はないですか。<br>
+３ それと同じで、この世の中、酷評のほうが正しいこともあるのではないですか。<br>
+４ それと同じで、この世の中、異なる意見があるからこそ、安定しているのではない
+ ですか。<br>
+ 
+(3) 
+哺乳類の寿命の式を使い、体重を 60 キログラムとして寿命を計算すると 26.3 年。つま
+りヒトのサイズの動物の寿命は、なんと 26.3 歳なのです。現実には私たらちの寿命は 80
+歳だから、これはずいぶんとおかしい数字です。
+(中略)
+ヒトサイズの動物の平均的な寿命は 26.3 年ですが、じつはこれはそれほどおかしな数
+字ではありません。（注）縄文人の寿命が 31 歳だったという研究があります。発掘され
+た骨を調べて求めた値です。この時代は幼児の死亡率がものすごく高いので、それを入れ
+た平均寿命はさらに低くなるのですが、15 歳以上で死んだものの平均をとると寿命は 31
+歳。 動物としてのヒトの寿命はこの程度なのでしょう。<br>
+（注）縄文人：古代の縄文時代に生きていた人々<br>
+48.文章の内容と合っているものはどれか。<br>
+１ 縄文時代の人間は同じサイズの動物とほとんど変わらない寿命だった。<br>
+２ 31歳というのは幼児の死亡も含まれているので、実際は縄文人のほうが動物よりず
+ っと長生きだった。<br>
+３ 現在ヒトの平均寿命は 80 歳であり、哺乳類の寿命の式を使って計算した値と違う
+ ので、ヒトは哺乳類とは言えない。<br>
+４ もともとヒトは動物と同じ程度の寿命だったが、サイズが大きくなった現在は寿命
+ が延びることになった。<br>
+ 
+(4) 
+話すことと書くことを対立して考えるのは、生産的ではない。元来、上手に書くことが
+できる人は、ある程度話にもまとまりがある。書き言葉が出来ていない人の場合は、話も
+また冗長になりがちだ。一対一でプライベートで話しているときには、話し言葉の力量差
+は表れにくい。書き言葉をたとえ修練していなくても、話は滞りなくできる。
+しかし、いったんフォーマルな場に出てみると、話すという行為が実は書き言葉によっ
+て精度が高められているのだということがわかる。大勢を前にして、二、三分で（注）か
+いつまんで意味のある話をする技術は、高度なものだ。 書き言葉をまったく修練してい
+ないと、普通はなかなか「意味の含有率」の高い話は出来にくいものだ。
+（注）かいつまんで：要点をおおまかにつかんで<br>
+49.話すことと書くことを対立して考えるのは、生産的ではないとあるが、なぜか。<br>
+１ 話し言葉と書き言葉はもともと同じものだから。<br>
+２ 話す訓練をすれば、書くことも上達するから。<br>
+３ 話し言葉は書き言葉を修練しないとできないから。<br>
+４ 書き言葉を修練することで、話すことも上達するから。<br>
+ 
+  
+問題 9 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4 か
+ら一つ選びなさい。 <br>
+(1) 
+春の陽気に誘われて神山の古本屋街に足を延ばした。ある書店で前から読みたかった一
+冊の文庫本を見つけた。書き込みがあるが「100 円均一」につられて手を出したのである。
+①腹が立ったのは「105 円だった」からではない。それを看板に書いておいてほしいと
+いうことだ。あいにく 10 円玉がなく、ポケットの小銭入れが膨れ上がったのも立腹した
+一因だった。古書店は店によって内税、外税ばらばらだ。新刊本も出版会社の裁量で値札
+がつけられているのだ。
+あれは消費税（当時税率 3%）が実施された 15 年前の 4 月 1 日のある新聞の社会面だっ
+た。小学生が 100 円のノートを買うのに 3 円足りないと学校近くの文房具店で②泣きべそ
+をかいているという記事である。総額の税込み価格が表示されていないことへの間題提起
+だったのか。それなら随分長い間放置していたものだ。
+4 月からようやく消費税込みの「総額表示」とすることが義務付けられるそうだ。小売
+業者などの不満は強いしコストもかかる。それも理解できないことはない。だが、消費税
+は消費者が支払う税である。「売る側の論理」も大事だが、もっと③「買う側の論理」を
+尊重していたださきたい。<br>
+ 
+50.筆者は何に①腹が立ったのか。<br>
+１ 前から読みたかった文庫本に書き込みがあったこと。<br>
+２ 値段に 105 円と書いてなかったこと。<br>
+３ 10 円玉がなかったこと。<br>
+４ 消費税が 5%になったこと。<br>
+51.②泣きべそをかいているのはどうしてか。<br>
+１ 小学生は 97 円しか持っていなかったから。<br>
+２ 小学生は 103 円しか持っていなかったから。<br>
+３ 小学生が持っていた 100 円では買えなかったから。<br>
+４ 小学生が買おうと思った 100 円のノートは売り切れていたから。<br>
+52.③買う側の論理とは何か。<br>
+１ 小銭が残らないように値段をつけるべきだ。<br>
+２ いくら払わなければならないのか明記しておくべきだ。<br>
+３ 内税と外税がわかるように書いておくべきだ。<br>
+４ 消費税はやめるべきだ。<br>
+  
+(2) <br>
+威張るのはよくないと思っている人が多い。しかし、威張るとは自分の役割に忠実にな
+ることである。そして役割に忠実になるとは、自分の権限と責任を目覚し、それを打ち出
+す勇気をもつということである。
+たとえばスチュワーデスが「お客様、おタバコはサインが消えるまでお待ちいただけな
+いでしょうか」というのは自分の責任に忠実な瞬間である。①出すぎたことでもないし、
+生意気をいっているわけでもない。教授が学生に「レポートは事務室に提出のこと。拙宅
+に郵送しても採点しない」というのは教師の権限を発揮しているわけで、権威主義とか押
+し付けというわけではない。
+自分の役割を明確に打ち出さないから後で後悔したり、人に無視されたり、なめられた
+りするのである。組織とは役割の束である。各自が自分の役割に忠実になるから組織はス
+ムーズに動くのである。②遠慮は無用とはこのことである。
+ところが、給料は役割に払われていることの自覚が足りない人がいる。いつもニコニコ
+して人の和を保っている好人物であるという理由で給料をもらっているわけではない。権
+限とは気合がかかっている必要がある。これを私は威張ることをためらうことなかれと少
+し極端に表現してみたのである。<br>
+
+53.①出すぎたことでもないはどんなことか。<br>
+１ サインがついている間はタバコを吸わないように客に頼むこと。<br>
+２ サインが消えるまでタバコを吸いながら待つよう客に頼むこと。<br>
+３ サインが消えないうちにタバコを消すよう客に頼むこと。<br>
+４ タバコのサインがつくまで待っているよう客に頼むこと。<br>
+54.②遠慮は無用とはここではどういう意味か。<br>
+１ いつもニコニコして人の和を保つこと。<br>
+２ 自分の役割を自覚し、権限を発揮すること。<br>
+３ 責任を人に押し付けること。<br>
+４ 自分の役割に対する自覚が足りないこと。<br>
+55.文の内容と合うのはどれか。<br>
+１ 威張って、権力をふるうのはよくない。<br>
+２ 自分の権限と責任を発揮して威張るのはよい。<br>
+３ 給料をもらうためには、あまり威張るわけにはいかない。<br>
+４ 自分の役割を明確に打ち出しても威張ることができない。<br>
+ 
+ 
+(3) 
+現在のように地球が狭くなり、それぞれ異なる言語を用いる人々の相互交流が、昔と違
+って、飛躍的に増大し始めると、異言語間の翻訳や通訳に要する労力や費用は膨大なもの
+となる。またどこの国でも、高等教育のかなりの部分が外国語の学習によって占められ、
+しかも必要とされる外国語が、人により回により必ずしも一つとは限らないという状態は、
+現代人にとってまことに①頭の痛い問題である。
+そこで誰しも考えることは、数千にものぼる自然言語とは別に、もし単一の世界共通語
+があったらどれほど楽か知れない、ということであろう。
+しかし人類すべてに共通する世界語の創造という課題は、その達成に際しての実際的な
+困難はもちろんだが、実は言語そのものの本質から言って、理論的に矛盾する内容を含む
+ために、②実現不可能な夢なのである。
+何故かと言えば、世界の言語を統一するためには、その前に私たち人間の世界認識を統
+一的に決定しなければならないからである。仮に一つの人工言語なり、あるいは自然言語
+なりを選んで、それを世界語と定めたところで、人類全体が持つ経験と認識の多様性およ
+びその動的な発展性とを、何らかの見地から整理・統合し、ある一定の枠におさめること
+が出来なければ、せっかくの形式上の統一も内容の伴わない無意味なものとなり、やがて
+は③その統一自体も、再び崩れ始める運命を逃げられないのである。<br>
+56.①頭の痛い問題とは何か。<br>
+１ 人々の交流が増大し始めたこと。<br>
+２ 翻訳や通訳に要する費用が膨大なものとなること。<br>
+３ 高等教育のかなりの部分が外国語の学習によって占められること。<br>
+４ 必要とされる外国語が、さまざまであり、一つとは限らないこと。<br>
+57.②実現不可能な夢とはどんなものか。<br>
+１ 人類すべてに共通する世界語を作りたい。<br>
+２ 人間の世界認識を統一したい。<br>
+３ あらゆる言語を学習したい。<br>
+４ 異なる言語を用いる人々と交流したい。<br>
+58.③そのは何を指すか。<br>
+１ 言語 ２ 経験 ３ 認識 ４ 発展性<br>
+
+ 
+問題 10 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
+から一つ選びなさい。 <br>
+私は葬式というものがキライで、出席しないことにしている。礼儀というものは、そん
+なところへ出席するところにあるとは思っていないから、①私は何とも思っていないが、
+誰々の告別式（葬式）に誰々が来なかったなどと、日本はうるさいところである。
+大倉喜八郎というお金持ちはオレが死んだら赤石山のお花畑へ骨をまいてくれと遺言し
+たそうだが、私は別にそう凝った手数をかける必要はないから、私の骨なんかは海の底で
+も、森の片隅でも、どこか邪魔にならないところへ、なくしてもらいたいと思っている。
+葬儀などとは、もってのほかで、身辺の二三人には、誰かに後始末してもらわなければな
+らないけれども、死んだ人問などというものは、一番つつましやかに、人目をさけて始末
+してほしい。むなしくなった私の（注 1）むくろを囲んで、事務的な処理をするほかに、
+よけいなことをされるのは、こうして考えてもはずかしい。
+死んだ顔に一々告別されたり、線香をたて、ローツクをもやし、香などというものをつ
+まんで（注 2）合掌メイモクされるなどと、考えてもあさましくて、僕は身辺の人に、告
+別式というものや、通夜というものは（注 3）コンリンザイやらぬこと、かたく私の死後
+をいましめてあるのである。（中略）
+②人間は生きているうちが全てである。社会人としての共同生活でも、生きている人の
+ためには、色々とはかりたいが、死んでしまえば、もう無、これはもう、生きた生活とは
+かかわりがない。
+友人同志でも、生きているうちこそ、色々と助け合い、励まし合うことが大切で、死後
+の葬式の盛儀を祈るなどということに、私は関心を持ちたいとは思わない。
+私自身は、私自身の死後の名声などということは考えていないのである。然し、それは
+仕事を粗末にするということではない。仕事には全力を賭けること、これは仕事というも
+の、つまり生きることを真に理解するものには当然のこと、むしろ、生のほかに死後とい
+うものを考える人の方に、生きることの全的な没入や努力は分からないのだろうと思う。
+生きること、全我を賭けて努力し生きることを知るものには、死後はないと私は思う。
+告別式の盛儀などを考えるのは、③生き方の貧困のあらわれにすぎず、貧困な虚礼にす
+ぎないのだろう。もっとも、そういうことに、こだわることも、あるいは、無意味かもし
+れない。
+私が人の葬儀に出席しないというのは、こだわるからでなく、全然そんなことが念頭に
+ないからで、われ関せず、それだけのことにすぎない。<br>
+ 
+（注 1）むくろ：体
+（注 2） 合掌
+がっしょう
+メイモク：目を閉じて、両手を顔の前に合わせて祈ること。
+（注 3）コンリンザイやらぬ：決してしない。
+59.①何とも思っていないとあるが、どういう意味か。<br>
+１ 葬式に凝った手数をかけるのが礼儀と思っていない。<br>
+２ 葬式に出席する際の礼儀について、特に注意していない。<br>
+３ 葬式の出欠についてうるさい人がいるとは思わない。<br>
+４ 葬式に行かないことで何か言われても、気にしない。<br>
+60.②人間は生きているうちが全てであるとはどういう意味か。<br>
+１ 死ねば、生きていた時の生活と関係なく無になるという意味。<br>
+２ 死後の名声というものは、生きているうちに決まるという意味。<br>
+３ 生きているうちに、自分の死後の処理を全て決めるという意味。<br>
+４ 葬式に出席しないのは、死んだらその人と関係が終わるという意味。<br>
+61.③生き方の貧困のあらわれにすぎずとあるが、具体的にどういう意味か。<br>
+１ 葬式を盛大にやってしまうと、後で貧しくなってしまうだけだ。<br>
+２ 生きているときに、死後のことを考える人は、真剣に生きているとはいえない。<br>
+３ 葬式を華やかにやっても、来てくれるのは見せかけの友人にすぎない。<br>
+４ 葬式のやり方にこだわるのは、生前の仕事がうまくいっていない人だけだ。<br>
+62.筆者の生と死に対する考え方 （生死観）について、述べている文はどれか。<br>
+１ 人間は生きている時と同様に、死後の始末も大切にすべきである。<br>
+２ 人間は葬式を盛大に行うことが、全力で生きたことの証明になる。<br>
+３ 人間は死後のことなど考えずに、今を全力で生きるべきだ。<br>
+４ 人間は死後も恥ずかしくないように何事にも努力すべきだ。<br>
+
+問題 11 次の A と B はそれぞれ別の新聞のコラムである。A と B の両方を読んで、後の問
+いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。 <br>
+A 
+昼間の明るい時間を有効利用するための「サマータイム（夏時間制度）の導入に向けた
+関連法案の次期国会提出が確実視されている。サマータイムは日照時間が長い期間、時計
+の針を 1 時間進める仕組みだ。戦後導入された時期もあったが、労働時間が増加するなど
+の理由で廃止された。今般、照明や冷房などの電力節約、つまり温暖化対策として再度提
+言された。さらに夕方の明るい時間帯のレジャー活動活性化によって約九千七百億円の経
+済効果、十万人の雇用創出につながるという。経済波及効果もさることながら、サマータ
+イムは自然のサイクルに合った生活スタイルを考える契機ともなり、「アフター5」に家
+族や友人との付き合い、余暇活動など「潤いのある生活」を取り戻すこともできると期待
+されている。<br>
+B 
+温暖化対策の一環としてサマータイム制度の導入が提言されている。豊かなライフスタ
+イル、省エネ、経済波及効果など、その効果に期待が高まっている。しかし、サマータイ
+ムが身体のリズムや睡眠に悪影響を及ぼすことは、多くが指摘するところだ。ヨーロッパ
+では、時計の針を 1 時間進めたことで、睡眠時間が短くなり睡眠効率も低下するという調
+査報告がある。日本人の睡眠時間は年々減っており、欧米諸国の平均より 1 時間短い。し
+かも 80%の人が夜十時過ぎても起きている夜型社会だ。中高生では夏休みに就寝時間が遅
+くなり、新学期に起きられず不登校になかるケースもある。不眠症に悩む高齢者も多い。
+夏冬の日照時間の差が大きい北半球の高緯度地域では効果もあるだろう。それをそのまま
+日本に当てはめることはできない。日本では現在 4ー5 人に 1 人が不眠などの問題を抱え
+ており、うつ病に伴う不眠も多い。温暖化対策の視点も重要だが、健康への影響を考慮す
+るべきだろう。<br>
+ 
+63.サマータイムを導入することに関して、A と B のどちらの記事にも触れられている内容
+はどれか。<br>
+１ サマータイムは地球温暖化対策として有効である。<br>
+２ サマータイムは健康に悪影響がある。<br>
+３ サマータイムは余暇活動を活発にする。<br>
+４ サマータイムは労働時間を増加させる。<br>
+64.サマータイム制度の導入について、A の筆者と B の筆者はどのような立場を取って い
+るか。<br>
+１ A は賛成だが、B は批判的である。<br>
+２ A は賛成だが、B は態度を明確にしていない。<br>
+３ A は態度を明確にしていないが、B は批判的である。<br>
+４ A も B も態度を明確にしていない。<br>
+65.サマータイム導入検討に当たって、A と B の筆者がそれぞれ重視しているものは何か。<br>
+１ A は経済的波及効果を重視し、B は夜型の生活を助長することを重視している。<br>
+２ A は労働時間の長時間化を重視し、B は高齢化社会への影響を重視している。<br>
+３ A は余暇時間の創出を重視し、B は健康面での損失を重視している。<br>
+４ A は省エネ効果を重視、B は睡眠への影響を重視している。<br>
+ 
+  
+問題 12 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
+から一つ選びなさい。 <br>
+かつて、モノは貴重だった。大量生産大量消費の現代生活が始まるまで、ほんのつい最
+近まで、モノは使い切るまで大切にされ、そのモノの用途が終わっても別のかたちで再利
+用したりして、それから処分された。食品も、米粒一つまで残さずに食べるようにしつけ
+られた。モノを使い切ってから捨てて、それから新しいモノを手に入れる循環がなされて
+いた。だからこそ、「もったいない」が美徳だった。
+しかし、今は違う。
+高度経済成長期には新しい電化製品が次々に現れ、「新しい」という理由でモノが買わ
+れていった。新しいモノ＝いいモノだったから、古いモノは惜しみなく廃棄されていった。
+新しい便利さ、新しい機能、新しい流行を採り入れるために、モノが次々に暮らしに入っ
+てきた。そのうち、バブル期の「ほしい物が、ほしい」（西武百貨店）というコピーに表
+されるように、必要なモノでは満たされていてもモノを買うことそのもの、つまり「消費」
+そのものが求められるようになった。
+そうして、消費に慣らされた私たちは、今に至ってもモノの（注 1）呪縛
+じゅばく
+からに逃れら
+れなくなっている。必要だからほしいのではなく、買うためにモノがほしい、という消費
+のしかたが定着しているといえる。その結果、モノの消費のスピードをはるかに超えてモ
+ノが増殖し、私たちの暮らしはモノで溢れるようになってしまった。
+どうも、①モノが貴重な時代からモノが溢れる時代までの変化があまりに急すぎたらし
+い。私たちは②「a」という美徳の名残りと、「b」という新しい事態の間で、困り果てて
+いる状態なのだ。
+そのジレンマからなんとかして逃れなければならない。このままでは、いつまで経って
+もモノの呪縛から解き放たれない。
+エコロジーや節約生活が注目されているように、モノを大切にして不要なものは買わな
+いことが、この呪縛から逃れる方法なのだろうか。いや、買うこと＝モノを増やすことを
+やめてしまうのは、あまりにさみしい。入ってくるモノをなくせばモノはいずれ減り、す
+っきりしてくることは明らかだ。でも、よほど（注 2）ストイックな人でもないかぎり、
+③それで楽しく暮せるとは思えない。少なくとも、筆者は嫌だ。
+ 
+ 好きなモノを持つのは楽しいし、新しい洋服を着ればうれしくなる。テレビや新聞があ
+っても、週刊誌も読みたい。情報誌もチェックしたい。目の前にあるどうしてもほしい食
+器を買わないことで、何かいいことがあるとは思いたくない。家計が楽になっても、暮ら
+しが楽しくないのは困る。
+自分に合った楽しく豊かな暮らしをしつつ、「もったいない」からもモノの増殖からも
+逃れられる、新しい暮らし方はないものだろうか。どうしたら見つかるのだろうか。<br>
+（注 1）呪縛：何かによって縛られ、動けないこと。<br>
+（注 2）ストイックな：感情に動かされない、禁欲的な。<br>
+66. ①モノが貴重な時代からモノが溢れる時代までの変化の説明として正しいものは
+どれか。<br>
+１ かつてモノは貴重で大切にされた。やがてバブル期となり、モノは膨大に買われた。
+そして、経済の高度成長期となり、今では新しいモノが溢れるようになった。<br>
+２ かつてモノは貴重で使い切られた。やがてモノが次々に暮らしに入るようになり、
+古いものは捨てられていった。しかし好景気は続かず、モノは再利用されるようになり、
+現在ではそれが溢れている。<br>
+３ 昔はモノがなく、モノは使い切るまで使われた。やがて大量生産大量消費の時代に
+なり、モノは買われ捨てられる時代になった。そして、現在は新しいモノを買うという循
+環は鈍くなったものの、依然としてモノが溢れている。<br>
+４ 昔はモノがなく、モノは使い切ってから捨てられた。やがて大量生産大量消費の時
+代になり、モノが次々に買われ、暮らしに入ってきた。そのうちバブル期を迎えるが、十
+分にモノがあっても買うことはやめようとしない。<br>
+67. ②「a」という美徳の名残りと、「b」という新しい事態の問とあるが、「a」と「b」
+に入る言葉の正しい組み合わせはどれか。<br>
+１ a：もったいない b：モノの増殖<br>
+２ a：モノの増殖 b：もったいない<br>
+３ a：もったいない b：モノの消費<br>
+４ a：再利用 b：モノがほしい<br>
+<br>
+68. ③それは何を指しているか。<br>
+１ 節約して家計が楽になること。<br>
+２ モノが減っていくこと。<br>
+３ 不要なものは買わないこと。<br>
+４ モノを大切にして捨てないこと。<br>
+69. 文章中の二重下線モノの呪縛とはどういう意味か。<br>
+１ 節約して買わず、買ったモノは使い切るまで捨ててはいけないこと。<br>
+２ 必要だから買うのではなく、買うためにモノがほしいこと。<br>
+３ モノをもったいないと思い捨てらちられないが、買うこともやめられないこと。<br>
+４ モノを買いすぎてモノが溢れてしまっていること。<br>
+問題 13 次はある自動車学校の料金表である。下の問いに対する答えとして、最もよい
+ものを 1・2・3・4 から一つ選びなさい。 <br>
+70.鈴木さん（30 歳）は高校生の時、自動二輪免許を取っていたが、仕事でマニュアル
+（MT）車の免許が必要になった。規定時間内で卒業できる自信があるので、オプションコ
+ースは使わないつもりだ。申込み時に必要な書類と入学時に必要な金額はどれか。<br>
+１ 住民票、92,000 円<br>
+２ 住民票、242,000 円<br>
+３ 自動二輪免許証、92,000 円<br>
+４ 自動二輪免許証、242,000 円<br>
+71.田中さん（25 歳）は大学院生である。卒業までにオートマチック車（AT）の免許を取
+りたいと思っている。用意したお金は 30 万円である。初めて免許を取るので、どのぐら
+い時間がかかるか不安だ。予算内で使えるオプションコースはいくつあるか。<br>
+１ 1 つ ２ 2 つ ３ 3 つ ４ なし<br>
+ 
+【ｘｘ自動車学校料金表】 <br>
+限定時間 <br>
+免許のない方 自動二輪免許のある方<br>
+学科教習 技能教習 学科教習 技能教習<br>
+AT 26 時間 31 時間 2 時間 29 時間<br>
+MT 26 時間 34 時間 2 時間 32 時間<br>
+注 1：技能教習は限定時間をオーバーした場合、追加料金 4,620 円／時間をお支払いください。
+普通車料金表（通常コース料金単位：円）<br>
+車種 入学時費必要金額 入学後費必要金額 合計金額<br>
+学生コース 免許のない方 AT 120,000 160,000 280,000<br>
+MT 120,000 173,000 293,000<br>
+自動二輪免許
+のある方
+AT 83,000 150,000 233,000
+MT 83,000 163,000 243,000
+レギュラー
+コース
+免許のない方 AT 128,000 160,000 288,000
+MT 128,000 173,000 301,000
+自動二輪免許
+のある方
+AT 92,000 150,000 242,000
+MT 92,000 163,000 255,000
+注 2：申し込み時に提出する書類
+ すでに自動車二輪免許を持っている方はその免許証
+ 初めて免許を取る方は住民票
+ 外国籍の方は外国人登録証明書
+ 学生コースの方は学生証
+ 
+普通車免許オプションコース（追加料金が心配な方）
+料金
+（税込み）
+特徴
+安心コース
+（29 歳までの方）・注 3
+10,500 円
+規定時間をオーバーしても、追加料金はいただき 
+ません。
+自信のない方でも追加料金の不安がなく、教習を受
+けられます。
+お任せコース・注 3
+63,000 円
+規定時間をオーバーしても、追加料金はいただき
+ません。
+自由に予約が取れます。
+電話で予約、当日キャンセルもできます。
+短期集中コース（29 歳ま
+での方） 42,000 円
+最短日数（AT で 19 日間／MT で 22 日間）で卒業でき
+るようにスケジュールを組みます。
+フリースケジュールコー
+ス
+42,000 円 ご都合に合わせて、できるだけ早く取れるようにス
+ケジュールを組みます。
+注 3：安心コース・お任せコースでお申込みの方は、料金きんがくを一括でお支払い 
+ください。
+    </div>    
     <p>
         <a class="setting--a"  href="index.html">home</a>
         <a class="setting--a"  href="testp13.html" target="_blank">link testp13</a>
