--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <title>home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body >
+<body>
     <div class="setting-index"> 
-        <a href="testp1.html" target="_blank">link testp1</a>
-        <a href="testp2.html" target="_blank">link testp2</a>
-        <a href="testp3.html" target="_blank">link testp3</a>
-        <a href="testp4.html" target="_blank">link testp4</a>
-        <a href="testp5.html" target="_blank">link testp5</a>
-        <a href="testp6.html" target="_blank">link testp6</a>
-        <a href="testp7.html" target="_blank">link testp7</a>
-        <a href="testp8.html" target="_blank">link testp8</a>
-        <a href="testp9.html" target="_blank">link testp9</a>
-        <a href="testp10.html" target="_blank">link testp10</a>
-        <a href="testp11.html" target="_blank">link testp11</a>
-        <a href="testp12.html" target="_blank">link testp12</a>
-        <a href="testp13.html" target="_blank">link testp13</a>
-        <a href="testp14.html" target="_blank">link testp14</a>
-        <a href="testp15.html" target="_blank">link testp15</a>
-        <a href="tanbunp1.html" target="_blank">tanbun N1</a>
+        <a class="setting--a" href="testp1.html" target="_blank">link testp1</a>
+        <a class="setting--a" href="testp2.html" target="_blank">link testp2</a>
+        <a class="setting--a"  href="testp3.html" target="_blank">link testp3</a>
+        <a class="setting--a"  href="testp4.html" target="_blank">link testp4</a>
+        <a class="setting--a"  href="testp5.html" target="_blank">link testp5</a>
+        <a class="setting--a"  href="testp6.html" target="_blank">link testp6</a>
+        <a  class="setting--a" href="testp7.html" target="_blank">link testp7</a>
+        <a class="setting--a"  href="testp8.html" target="_blank">link testp8</a>
+        <a class="setting--a"  href="testp9.html" target="_blank">link testp9</a>
+        <a class="setting--a"  href="testp10.html" target="_blank">link testp10</a>
+        <a class="setting--a"  href="testp11.html" target="_blank">link testp11</a>
+        <a class="setting--a"  href="testp12.html" target="_blank">link testp12</a>
+        <a class="setting--a"  href="testp13.html" target="_blank">link testp13</a>
+        <a class="setting--a"  href="testp14.html" target="_blank">link testp14</a>
+        <a class="setting--a"  href="testp15.html" target="_blank">link testp15</a>
+        <a class="setting--a"  href="tanbunp1.html" target="_blank">tanbun N1</a>
         </div>
 </body>
 </html>
