--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <a class="setting--a"  href="testp14.html" target="_blank">link testp14</a>
         <a class="setting--a"  href="testp15.html" target="_blank">link testp15</a>
         <a class="setting--a"  href="tanbunp1.html" target="_blank">tanbun N1</a>
+        <a class="setting--a"  href="https://tailieutiengnhat.net/260-cau-luyen-thi-tu-vung-jlpt-n1-phan-1.html" target="_blank">260-cau-luyen-thi-tu-vung p1</a>
+        <a class="setting--a"  href="https://tailieutiengnhat.net/260-cau-luyen-thi-tu-vung-jlpt-n1-phan-2.html" target="_blank">260-cau-luyen-thi-tu-vung p2</a>
+
         </div>
 </body>
 </html>
